@Ceo-Sammarco - sex 22 dez 2023

--- a/index.html
+++ b/index.html
@@ -248,43 +248,43 @@
             <h2>Sensi</h2>
                <label>
                   <tt>Camera FOV</tt>
-                  <input type="number" value="${ getFov }">
+                  <input type="number" value="${ getFov }" readonly>
                </label>
                <label>
                   <tt>Camera Standard Sensitivity</tt>
-                  <input type="number" value="${ getSensi }">
+                  <input type="number" value="${ getSensi }" readonly>
                </label>
                <label>
                   <tt>ADS</tt>
-                  <input type="number" value="${ Math.round( Returned[0] ) }">
+                  <input type="number" value="${ Math.round( Returned[0] ) }" readonly>
                </label>
                <label>
                   <tt>Sniper</tt>
-                  <input type="number" value="${ Math.round( Returned[4] ) }">
+                  <input type="number" value="${ Math.round( Returned[4] ) }" readonly>
                </label>
                <label>
                   <tt>Sniper( Quickscope )</tt>
-                  <input type="number" value="${ Math.round( Returned[4] + ( Returned[4] / 2 ) ) }">
+                  <input type="number" value="${ Math.round( Returned[4] + ( Returned[4] / 2 ) ) }" readonly>
                </label>
                <label>
                   <tt>Escopo Tático</tt>
-                  <input type="number" value="${ Math.round( Returned[1] ) }">
+                  <input type="number" value="${ Math.round( Returned[1] ) }" readonly>
                </label>
                <label>
                   <tt>3x Tactical Scope</tt>
-                  <input type="number" value="${ Math.round( Returned[2] ) }">
+                  <input type="number" value="${ Math.round( Returned[2] ) }" readonly>
                </label>
                <label>
                   <tt>4x Tactical </tt>
-                  <input type="number" value="${ Math.round( Returned[3] ) }">
+                  <input type="number" value="${ Math.round( Returned[3] ) }" readonly>
                </label>
                <label>
                   <tt>6x Tactical </tt>
-                  <input type="number" value="${ Math.round( Returned[5] ) }">
+                  <input type="number" value="${ Math.round( Returned[5] ) }" readonly>
                </label>
                <label>
                   <tt>8x Tactical </tt>
-                  <input type="number" value="${ Math.round( Returned[5] ) }">
+                  <input type="number" value="${ Math.round( Returned[5] ) }" readonly>
                </label>
             `;
          } );
